# django-search-query

./: .gitignore  AGENTS.md  CHANGES  LICENSE  MIGRATION  README.md  conftest.py  justfile  manage.py  pyproject.toml
.github/workflows/: docs.yml  tests.yml
docs/: AGENTS.md  api.md  conf.py  conftest.py  history.md  index.md  install.md  justfile  manifest.json  query.md  quickstart.md  redirects.txt  tutorial.md
docs/_ext/widgets/: __init__.py  _base.py  _directive.py  _discovery.py  _prehydrate.py  library_install.py  package_install.py
docs/_static/css/: dsq-inline.css
docs/_widgets/library-install/: widget.css  widget.html  widget.js
docs/_widgets/package-install/: widget.css  widget.html  widget.js
docs/project/: contributing.md  index.md  releasing.md
test_app/: __init__.py  admin.py  models.py
test_app/management/: __init__.py
test_app/management/commands/: __init__.py  seed_dev.py
tests/: __init__.py  lexer_parity_golden.json  settings.py  settings_dev.py  settings_e2e.py  test_admin_search.py  test_api.py  test_builder.py  test_highlight.py  test_lexer_parity.py  test_metadata.py  test_parser.py  test_pygments_lexer.py  test_query_examples.py  test_query_showcase.py  test_search_endpoints.py  test_tokenizer.py  urls.py  urls_dev.py
tests/e2e/: test_colored_input.py
