# django-search-query — uv workspace root (virtual project).
#
# This root is a uv workspace, not a distributable package: it has no
# [project] or [build-system] table. The publishable packages live under
# packages/*. All shared tooling (ruff, ty, pytest, coverage) is configured
# here once and applies to every member, so a single `uv run pytest` /
# `uv run ruff check` / `uv run ty check` covers the whole workspace.

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
# The workspace redirect for each member lives here exactly once; members
# depend on each other with ordinary version pins in their own
# [project.dependencies].
django-search-query = { workspace = true }
django-admin-search-query = { workspace = true }

[tool.uv.exclude-newer-package]
# git-pull packages release in lockstep with their workspaces, so a fresh
# release blocking on the 3-day cooldown would block every contributor's
# `uv sync` until it clears. `false` exempts each from any `exclude-newer`
# constraint (global or per-user) without committing a date that would age
# into the lockfile. Mirrors the pattern at django-docutils/pyproject.toml.
gp-libs = false
gp-furo-theme = false
gp-sphinx = false
sphinx-autodoc-api-style = false
sphinx-autodoc-docutils = false
sphinx-autodoc-sphinx = false
sphinx-fonts = false
sphinx-gp-opengraph = false
sphinx-gp-sitemap = false
sphinx-gp-llms = false
sphinx-gp-theme = false
sphinx-ux-autodoc-layout = false
sphinx-ux-badges = false

[dependency-groups]
dev = [
  # Workspace members, installed editable for local development
  "django-search-query",
  "django-admin-search-query",
  # Docs
  "gp-sphinx==0.0.1a34",
  "gp-libs>=0.0.19",
  "sphinx-autobuild",
  # Testing
  "pytest",
  "pytest-django",
  "pytest-watcher",
  "pytest-mock",
  "pytest-rerunfailures",
  "pytest-playwright",
  # Dev server auto-reload for the colored-input harness (`just dev`)
  "django-browser-reload",
  # Coverage
  "codecov",
  "coverage",
  "pytest-cov",
  # Lint / types
  "ruff",
  "ty",
  "django-stubs",
  # Pygments lexer for `dsq` code fences (dev/docs only, not a runtime dep)
  "pygments",
]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = [
  "E", # pycodestyle
  "F", # pyflakes
  "I", # isort
  "UP", # pyupgrade
  "A", # flake8-builtins
  "B", # flake8-bugbear
  "C4", # flake8-comprehensions
  "COM", # flake8-commas
  "EM", # flake8-errmsg
  "Q", # flake8-quotes
  "PTH", # flake8-use-pathlib
  "SIM", # flake8-simplify
  "TRY", # Trycertatops
  "PERF", # Perflint
  "RUF", # Ruff-specific rules
  "D", # pydocstyle
  "FA100",  # future annotations
]
ignore = [
  "COM812", # missing trailing comma, ruff format conflict
]
extend-safe-fixes = [
  "UP006",
  "UP007",
]
pyupgrade.keep-runtime-typing = false

[tool.ruff.lint.isort]
known-first-party = [
  "django_search_query",
  "django_admin_search_query",
]
combine-as-imports = true
required-imports = [
  "from __future__ import annotations",
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"*/__init__.py" = ["F401"]
"packages/*/src/**/*.py" = ["PTH"]

[tool.ty.environment]
# Django 6.0 drops Python 3.10/3.11, so the workspace floor is 3.12.
python-version = "3.12"

[tool.pytest.ini_options]
addopts = "--tb=short --no-header --showlocals --doctest-modules"
doctest_optionflags = "ELLIPSIS NORMALIZE_WHITESPACE"
markers = [
  "e2e: browser end-to-end tests (excluded unless run with -m e2e)",
]
testpaths = [
  "packages/django-search-query/src",
  "packages/django-admin-search-query/src",
  "tests",
  "docs",
]
pythonpath = ". tests"
filterwarnings = [
  "ignore::PendingDeprecationWarning",
]

# pytest-django
django_find_project = false
DJANGO_SETTINGS_MODULE = "tests.settings"

[tool.coverage.run]
omit = [
  "docs/conf.py",
]

[tool.coverage.report]
exclude_also = [
  "def __repr__",
  "if self.debug:",
  "if settings.DEBUG",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "if t.TYPE_CHECKING:",
  "class .*\\bProtocol\\):",
  "@(abc\\.)?abstractmethod",
  "from __future__ import annotations",
]
